tests/invalid_scir_h/invalid_missing_field_place.scirh
module invalid.missing_field_place
type Counter record { value int }

fn bad counter Counter -> int !
  return counter.missing
